--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
     </section>
     <section class="slider" id="tab-next">
       <h1>PUBG</h1>
-      <h2>framework
-        for Production</h2>
+      <h2>Under construction, please stay tuned...</h2>
     </section>
     <section class="slider" id="tab-typescript">
       <h1>APEX</h1>
