--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 <head>
 <meta charset="UTF-8">
-<title>疯狂老鼠</title>
+<title>MOUSECN</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -37,13 +37,6 @@
       <span>术</span>
       <span>冒</span>
       <span>险</span>
-      <span>&nbsp;</span>
-      <span>-</span>
-      <span>&nbsp;</span>
-      <span>疯</span>
-      <span>狂</span>
-      <span>老</span>
-      <span>鼠</span>
     </h3>
     <div class="nav-container">
       <a class="nav-tab" href="#tab-pwa">PWA</a>
