--- a/index.html
+++ b/index.html
@@ -57,10 +57,18 @@
       <h1>5E</h1>
       <h2>Under construction, please stay tuned...</h2>
     </section>
+            <script>
+  function openPUBGLink() {
+    // Open the link in a new window or tab
+    window.open('https://wwsq.lanzouv.com/b00xy2r7e', '_blank');
+  }
+</script>
     <section class="slider" id="tab-next">
       <h1>PUBG</h1>
-      <h2>Under construction, please stay tuned...</h2>
+      <h2>Password:fig5</h2>
+      <button onclick="openPUBGLink()">Click me for a surprise!</button>
     </section>
+
     <section class="slider" id="tab-typescript">
       <h1>APEX</h1>
       <h2>Under construction, please stay tuned...</h2>
