--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
 <link rel="stylesheet" href="static/css/style.css">
 
 <script src="static/js/particles.min.js"></script>
+  <style>
+    .slider {
+      text-align: center;
+      padding: 20px;
+    }
 
+    /* 设置按钮样式 */
+    button {
+      background-color: rgba(255, 0, 0, 0.5); /* 红色，透明度为 0.5 */
+      color: white; /* 文字颜色为白色 */
+      padding: 10px 20px; /* 按钮内边距 */
+      border: none; /* 移除边框 */
+      cursor: pointer; /* 鼠标样式为手型 */
+    }
+
+    /* 鼠标悬停时改变按钮样式 */
+    button:hover {
+      background-color: rgba(255, 0, 0, 0.8); /* 鼠标悬停时的颜色 */
+    }
+  </style>
 </head>
 <body>
 
@@ -66,7 +85,7 @@
     <section class="slider" id="tab-next">
       <h1>PUBG</h1>
       <h2>Password:fig5</h2>
-      <button onclick="openPUBGLink()">Click me for a surprise!</button>
+      <button onclick="openPUBGLink()">Click me for Url!</button>
     </section>
 
     <section class="slider" id="tab-typescript">
