--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 <link rel="stylesheet" href="static/css/style.css">
 
 <script src="static/js/particles.min.js"></script>
-  <style>
-    .slider {
+      .slider {
       text-align: center;
       padding: 20px;
     }
 
     /* 设置按钮样式 */
     button {
-      background-color: rgba(255, 0, 0, 0.5); /* 红色，透明度为 0.5 */
+      background-color: rgba(255, 0, 0, 0.5); /* 半透明红色背景 */
       color: white; /* 文字颜色为白色 */
       padding: 10px 20px; /* 按钮内边距 */
       border: none; /* 移除边框 */
@@ -34,7 +33,6 @@
     button:hover {
       background-color: rgba(255, 0, 0, 0.8); /* 鼠标悬停时的颜色 */
     }
-  </style>
 </head>
 <body>
 
@@ -76,17 +74,18 @@
       <h1>5E</h1>
       <h2>Under construction, please stay tuned...</h2>
     </section>
-            <script>
+<script>
   function openPUBGLink() {
     // Open the link in a new window or tab
     window.open('https://wwsq.lanzouv.com/b00xy2r7e', '_blank');
   }
 </script>
-    <section class="slider" id="tab-next">
-      <h1>PUBG</h1>
-      <h2>Password:fig5</h2>
-      <button onclick="openPUBGLink()">Click me for Url!</button>
-    </section>
+
+<section class="slider" id="tab-next">
+  <h1>PUBG</h1>
+  <h2>Password:fig5</h2>
+  <button onclick="openPUBGLink()">Click me for Url!</button>
+</section>
 
     <section class="slider" id="tab-typescript">
       <h1>APEX</h1>
