--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <link rel="stylesheet" href="static/css/style.css">
 
 <script src="static/js/particles.min.js"></script>
-      .slider {
+  <style>
+    .slider {
       text-align: center;
       padding: 20px;
     }
@@ -33,6 +34,7 @@
     button:hover {
       background-color: rgba(255, 0, 0, 0.8); /* 鼠标悬停时的颜色 */
     }
+  </style>
 </head>
 <body>
 
