--- a/index.html
+++ b/index.html
@@ -72,9 +72,17 @@
       <h1>PWA</h1>
       <h2>Under construction, please stay tuned...</h2>
     </section>
+    <script>
+  function open5ELink() {
+    // Open the link in a new window or tab
+    window.open('https://wwsq.lanzoub.com/b00xy42ba', '_blank');
+  }
+</script>
     <section class="slider" id="tab-graphql">
       <h1>5E</h1>
-      <h2>Under construction, please stay tuned...</h2>
+      <h2>Password:6v9u</h2>
+      <h2></h2>
+      <button onclick="open5ELink()">Click me for Url!</button>
     </section>
 <script>
   function openPUBGLink() {
