--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     /* 设置按钮样式 */
     button {
       background-color: rgba(255, 0, 0, 0.5); /* 半透明红色背景 */
-      color: white; /* 文字颜色为白色 */
+      color: #03dac6; /* 文字颜色为白色 */
       padding: 10px 20px; /* 按钮内边距 */
       border: none; /* 移除边框 */
       cursor: pointer; /* 鼠标样式为手型 */
