--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       cursor: pointer; /* 鼠标样式为手型 */
     }
 
-    /* 鼠标悬停时改变按钮样式 
+    /* 鼠标悬停时改变按钮样式 */
     button:hover {
       background-color: rgba(255, 0, 0, 0.5); /* 鼠标悬停时的颜色 */
     }
-    */
+   
   </style>
 </head>
 <body>
