--- a/test.htm
+++ b/test.htm
@@ -19,7 +19,7 @@
             postData.append('Type', '3');
 
             // 发送 POST 请求
-            fetch('path/to/your/php/proxy.php', {
+            fetch('proxy.php', {
                 method: 'POST',
                 body: postData,
                 headers: {
