--- a/index.html
+++ b/index.html
@@ -69,13 +69,18 @@
   </section>
 
   <main class="main">
+        <script>
+  function openPWALink() {
+    window.open('https://wwsq.lanzouv.com/b00xzsggj', '_blank');
+  }
     <section class="slider" id="tab-pwa">
       <h1>PWA</h1>
-      <h2>Under construction, please stay tuned...</h2>
+            <h2>Password:4l2x</h2>
+      <h2></h2>
+      <button onclick="openPWALink()">Click me for Url!</button>
     </section>
     <script>
   function open5ELink() {
-    // Open the link in a new window or tab
     window.open('https://wwsq.lanzoub.com/b00xy42ba', '_blank');
   }
 </script>
@@ -87,7 +92,6 @@
     </section>
 <script>
   function openPUBGLink() {
-    // Open the link in a new window or tab
     window.open('https://wwsq.lanzouv.com/b00xy2r7e', '_blank');
   }
 </script>
