--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
         padding: 20px;
     }
 
-    /* 设置按钮样式 */
     button {
-        background-color: rgba(255, 0, 0, 0.5); /* 半透明红色背景 */
-        color: #03dac6; /* 文字颜色为白色 */
-        padding: 10px 20px; /* 按钮内边距 */
-        border: none; /* 移除边框 */
-        cursor: pointer; /* 鼠标样式为手型 */
+        background-color: rgba(255, 0, 0, 0.5); 
+        color: #03dac6;
+        padding: 10px 20px;
+        border: none; 
+        cursor: pointer; 
     }
 
-    /* 鼠标悬停时改变按钮样式 */
+    
     button:hover {
-        background-color: rgba(255, 0, 0, 0.5); /* 鼠标悬停时的颜色 */
+        background-color: rgba(255, 0, 0, 0.5); 
     }
 </style>
 </head>
