--- a/test.html
+++ b/test.html
@@ -105,7 +105,7 @@
 <script src="static/js/script.js"></script>
 <script>
     function openPWALink() {
-        window.open('https://wwsq.lanzouv.com/b00xzsggj', '_blank');
+        window.open('https://lanzou.opai.im/?url=https://wwsq.lanzouv.com/iZ7JN1jm23le', '_blank');
     }
 
     function open5ELink() {
