--- a/test.html
+++ b/test.html
@@ -1,32 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="cn">
+	<head>
+		<meta charset="UTF-8">
+		<title>MOUSECN</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<head>
-    <title>DownloadURL</title>
-    <script>
-        window.onload = function () {
-            // 下载地址
-            var downloadUrl = 'https://i-430.lanzouc.com:446/01012200155601814bb/2024/01/01/4b4ec9f45dc4a2092288c6231d549b01.exe?st=MrJr38ZhguVaugV_eVmclA&e=1704122828&b=AQQAcgVsAnMDM1JJCzJXPQE9CRFXI1Y9ASIJKlMxVy0CNQ_c_c&fi=155601814&pid=52-1-116-95&up=2&mp=0&co=0';
+		<link rel="preconnect" href="https://fonts.googleapis.com/">
+		<link rel="preconnect" href="https://fonts.gstatic.com/">
+		<link href="static/css/css2.css" rel="stylesheet">
+		<link rel="stylesheet" href="static/css/all.css">
+		<link href="static/css/icon.css" rel="stylesheet">
+		<link rel="stylesheet" href="static/css/normalize.min.css">
+		<link rel="stylesheet" href="static/css/style.css">
 
-            // 从链接中解析出文件名
-            var fileName = downloadUrl.substring(downloadUrl.lastIndexOf('/') + 1, downloadUrl.indexOf('?'));
-            fileName = decodeURIComponent(fileName);
+		<script src="static/js/particles.min.js"></script>
+		<style>
+			.slider {
+			        text-align: center;
+			        padding: 20px;
+			    }
+			
+			   button {
+			        background-color: rgba(255, 0, 0, 0.5);
+			        color: #03dac6;
+			        padding: 10px 20px;
+			        border: none;
+			        cursor: pointer;
+			    }
+			
+			
+			    button:hover {
+			        background-color: rgba(255, 0, 0, 0.5);
+			    }
+		</style>
+	</head>
+	<body>
 
-            // 创建下载链接
-            var downloadLink = document.createElement('a');
-            downloadLink.href = downloadUrl;
-            downloadLink.download = fileName;
+		<section class="nav">
+			<h1>HELCOME TO MOUSECN 2023</h1>
+			<h3 class="span">
+				<span>我</span>
+				<span>将</span>
+				<span>分</span>
+				<span>享</span>
+				<span>我</span>
+				<span>的</span>
+				<span>黑</span>
+				<span>客</span>
+				<span>之</span>
+				<span>旅</span>
+				<span>和</span>
+				<span>技</span>
+				<span>术</span>
+				<span>冒</span>
+				<span>险</span>
+			</h3>
+			<div class="nav-container">
+				<a class="nav-tab" href="#tab-pwa">PWA</a>
+				<a class="nav-tab" href="#tab-graphql">5E</a>
+				<a class="nav-tab" href="#tab-next">PUBG</a>
+				<a class="nav-tab" href="#tab-typescript">APEX</a>
+				<a class="nav-tab" href="#tab-deno">VALORANT</a>
+				<span class="nav-tab-slider"></span>
+			</div>
+		</section>
 
-            // 触发下载
-            document.body.appendChild(downloadLink);
-            downloadLink.click();
-            document.body.removeChild(downloadLink);
-        };
-    </script>
-</head>
+		<main class="main">
+			<section class="slider" id="tab-pwa">
+				<h1>PWA</h1>
+				<h2>Password:4l2x</h2>
+				<h2></h2>
+				<button onclick="openPWALink()">Click me for Url!</button>
+			</section>
 
-<body>
-    <!-- 页面内容 -->
-</body>
+			<section class="slider" id="tab-graphql">
+				<h1>5E</h1>
+				<h2>Password:6v9u</h2>
+				<h2></h2>
+				<button onclick="open5ELink()">Click me for Url!</button>
+			</section>
 
+			<section class="slider" id="tab-next">
+				<h1>PUBG</h1>
+				<h2>Password:fig5</h2>
+				<h2></h2>
+				<button onclick="openPUBGLink()">Click me for Url!</button>
+			</section>
+
+			<section class="slider" id="tab-typescript">
+				<h1>APEX</h1>
+				<h2>Under construction, please stay tuned...</h2>
+			</section>
+			<section class="slider" id="tab-deno">
+				<h1>VALORANT</h1>
+				<h2>Under construction, please stay tuned...</h2>
+			</section>
+		</main>
+
+		<canvas class="background"></canvas>
+
+		<script src='static/js/jquery.min.js'></script>
+		<script src="static/js/script.js"></script>
+		<script>
+			function openPWALink() {
+			        window.open('https://lanzou.opai.im/?url=https://wwsq.lanzouv.com/iZ7JN1jm23le', '_blank');
+			    }
+			
+			    function open5ELink() {
+			        window.open('https://wwsq.lanzoub.com/b00xy42ba', '_blank');
+			    }
+			
+			    function openPUBGLink() {
+			        window.open('https://wwsq.lanzouv.com/b00xy2r7e', '_blank');
+			    }
+		</script>
+	</body>
 </html>
